[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker-uniproject"
version = "0.1.0"
description = "A simple terminal-based expense tracker using Python and SQLite"
authors = [{name = "Milena Aghabekyan", email = "milaghabekyan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "YSU" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
expense-tracker = "src.main:main"